Update homepage theme author to shrike505

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
                 <div class="self-content">
                     <div class="info-container">
-                        This is a simple homepage theme by Zapic.
+                        @shrike505
                     </div>
 
                 </div>
