--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                     </g>
                 </g>
             </svg>
-            <img alt="" src="static/img/avatar.jpg" class="avatar-img no-delay"/>
+            <img alt="" src="static/img/avatar.png" class="avatar-img no-delay"/>
         </div>
         <div class="loading-text text-center">
             <p class="loading-pre">Loading...</p>
-            <p class="avatar-name">Present</p>
+            <p class="avatar-name">shrike505</p>
             <p class="dokidoki-text"></p>
         </div>
     </div>
@@ -35,7 +35,7 @@
         <div class="content-container">
             <div class="self-wrapper">
                 <div class="self-content links-container flex-center text-center">
-                    <a href="#" class="link-item">
+                    <a href="https://shrike505.cc/" class="link-item">
                         <div class="link-icon"><i class="fa fa-home"></i></div>
                         <div>博客</div>
                     </a>
@@ -55,7 +55,7 @@
                         <div class="link-icon"><i class="fa fa-steam"></i></div>
                         <div>Steam</div>
                     </a>
-                    <a href="#" class="link-item">
+                    <a href="https://github.com/shrike-505" class="link-item">
                         <div class="link-icon"><i class="fa fa-github"></i></div>
                         <div>Github</div>
                     </a>
@@ -97,7 +97,7 @@
             </div>
         </div>
     </div>
-    <div class="footer-container text-center">© 2020 By <a href="#">Present</a></div>
+    <div class="footer-container text-center">© 2020 By <a href="#">shrike505</a></div>
 </body>
 
 <link rel="stylesheet" href="static/css/main.css">
