chore: Update title and links in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>Present</title>
+    <title>Paradise</title>
     <meta name="keywords" content=""/>
     <meta name="description" content=""/>
     <meta name="renderer" content="webkit">
@@ -39,7 +39,7 @@
                         <div class="link-icon"><i class="fa fa-home"></i></div>
                         <div>博客</div>
                     </a>
-                    <a href="#" class="link-item">
+                    <a href="https://space.bilibili.com/164131287" class="link-item">
                         <div class="link-icon"><i class="fa fa-play-circle"></i></div>
                         <div>Bilibili</div>
                     </a>
@@ -119,11 +119,26 @@
         }];
         var senArr = [
             {
-                ch: ["This is an example."],
-                py: ["This is an example."],
+                ch: ["You are my Waterloo, and I'll be your Calvary."],
+                py: ["You are my Waterloo, and I'll be your Calvary."],
             }, {
-                ch: ["这是", "一个", "示例", "."],
-                py: ["zhe'shi", "yi'ge", "shi'li", "."],
+                ch: ["你的身体", "单薄", "而绵密", "，","像一片","打湿的餐巾", "."],
+                py: ["ni'de'shen'ti", "dan'bo", "er'mian'mi", "，","xiang'yi'pian","da'shi'de'can'jin", "."],
+            }, {
+                ch: ["世上","是否有","三年的","雨季","."],
+                py: ["shi'shang","shi'fou'you","san'nian'de","yu'ji","."],
+            }, {
+                ch: ["令","燕子","厌倦","的一切"],
+                py: ["ling","yan'zi","yan'juan","de'yi'qie"],
+            }, {
+                ch:["如果可以","和你","一直在一起","."],
+                py:["ruo'guo'ke'yi","he'ni","yi'zhi'zai'yi'qi","."],
+            }, {
+                ch:["今天","我来举杯","，","喝醉那","所有的魔鬼","."],
+                py:["jin'tian","wo'lai'ju'bei","，","he'zui'na","suo'you'de'mo'gui","."],
+            }, {
+                ch:["电灯熄灭"," ","物换星移"," ","泥牛入海"],
+                py:["dian'deng'xi'mie"," ","wu'huan'xing'yi"," ","ni'niu'ru'hai"],
             }
         ];
 
