chore: Update Chinese translations in index.html

--- a/index.html
+++ b/index.html
@@ -122,23 +122,32 @@
                 ch: ["You are my Waterloo, and I'll be your Calvary."],
                 py: ["You are my Waterloo, and I'll be your Calvary."],
             }, {
-                ch: ["你的身体", "单薄", "而绵密", "，","像一片","打湿的餐巾", "."],
-                py: ["ni'de'shen'ti", "dan'bo", "er'mian'mi", "，","xiang'yi'pian","da'shi'de'can'jin", "."],
+                ch: ["你的身体", "单薄", "而绵密", "，","像一片","打湿的","餐巾", "。"],
+                py: ["ni'de'shen'ti", "dan'bo", "er'mian'mi", "，","xiang'yi'pian","da'shi'de","can'jin", "。"],
             }, {
-                ch: ["世上","是否有","三年的","雨季","."],
-                py: ["shi'shang","shi'fou'you","san'nian'de","yu'ji","."],
+                ch: ["世上","是否有","三年的","雨季","。"],
+                py: ["shi'shang","shi'fou'you","san'nian'de","yu'ji","。"],
             }, {
-                ch: ["令","燕子","厌倦","的一切"],
-                py: ["ling","yan'zi","yan'juan","de'yi'qie"],
+                ch: ["令","燕子","厌倦","的一切","。"],
+                py: ["ling","yan'zi","yan'juan","de'yi'qie","。"],
             }, {
-                ch:["如果可以","和你","一直在一起","."],
-                py:["ruo'guo'ke'yi","he'ni","yi'zhi'zai'yi'qi","."],
+                ch:["如果可以","和你","，","一直","在一起","。"],
+                py:["ruo'guo'ke'yi","he'ni","，","yi'zhi","zai'yi'qi","。"],
             }, {
-                ch:["今天","我来举杯","，","喝醉那","所有的魔鬼","."],
-                py:["jin'tian","wo'lai'ju'bei","，","he'zui'na","suo'you'de'mo'gui","."],
+                ch:["今天","我来举杯","，","喝醉那","所有的","魔鬼","。"],
+                py:["jin'tian","wo'lai'ju'bei","，","he'zui'na","suo'you'de","mo'gui","。"],
             }, {
-                ch:["电灯熄灭"," ","物换星移"," ","泥牛入海"],
-                py:["dian'deng'xi'mie"," ","wu'huan'xing'yi"," ","ni'niu'ru'hai"],
+                ch:["我们","好像","在","池塘的","水底","，","从","一个月亮","走向","另一个月亮","。"],
+                py:["wo'men","hao'xiang","zai","chi'tang'de","shui'di","，","cong","yi'ge'yue'liang","zou'xiang","ling'yi'ge'yue'liang","。"],
+            },{
+                ch:["电灯熄灭","，","物换星移","，","泥牛入海","。"],
+                py:["dian'deng'xi'mie","，","wu'huan'xing'yi","，","ni'niu'ru'hai","。"],
+            }, {
+                ch: ["比起","含有钠","的","斜长石","你有一颗","更能","融化","我的","心","。"],
+                py: ["bi'qi","han'you'na","de","xie'chang'shi","ni'you'yi'ke","geng'neng","rong'hua","wo'de","xin","。"],
+            }, {
+                ch: ["距离","能","削弱","平庸的","感情","，","也能","磨练","真爱","；","\n","正如","大风","既能","吹灭","蜡烛","，","也能","助长","烈焰","。"],
+                py: ["ju'li","neng","xue'rui","ping'rong'de","gan'qing","，","ye'neng","mo'lian","zhen'ai","；","\n","zheng'ru","da'feng","ji'neng","chui'mie","la'zhu","，","ye'neng","zhu'chang","lie'yan","。"],
             }
         ];
 
